<resources>
    <string name="app_name">StockQuote</string>
    <string name="action_settings">Settings</string>
    <string name="stock_symbol">Enter Symbol</string>
    <string name="enter_stock_symbol">Enter</string>
    <string name="stock_symbol_list">Stock Symbols and Quotes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="missing_stock_symbol">Enter a Stock Symbol</string>
    <string name="invalid_stock_symbol">Invalid Stock Symbol</string>
    <string name="delete_all_symbols">Delete all Symbols</string>
    <string name="confirm_action">Are you sure?</string>
    <string name="get_stock_quote">Quote</string>
    <string name="go_to_website">Web</string>
    <string name="yahoo_stock_url">http://finance.yahoo.com/q?s=</string>
    <string name="title_activity_stock_info">StockInfoActivity</string>
    
    <string name="stock_year_low">Year Low:</string>
    <string name="stock_year_high">Year High:</string>
    <string name="stock_days_low">Days Low:</string>
    <string name="stock_days_high">Days High:</string>
    <string name="stock_last_price">Last Price:</string>
    <string name="stock_change">Change:</string>
    <string name="stock_daily_price_range">Daily Price Range:</string>


</resources>
