<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gabrielmechali.stockquote.MainActivity">


    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_symbol"
            android:id="@+id/enterSymbolTextView" />

        <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stockSymbolEditText"
            android:ems="10"
            android:inputType="text"
            android:layout_weight="1"/>
        <requestFocus/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_stock_symbol"
            android:id="@+id/enterStockSymbolButton" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/eggshell">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_symbol_list"
            android:id="@+id/stockSymbolAndQuoteTextView"
            android:layout_span="3"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/stock_list_text_size"
            android:gravity="center_horizontal" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow3"
        android:layout_weight="3"
        android:background="@color/eggshell">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollViewMain"
            android:layout_span="3"
            android:padding="5dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stockTableScrollView"
                android:stretchColumns="yes">
            </TableLayout>
        </ScrollView>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_all_symbols"
            android:layout_span="3"
            android:layout_weight="3"
            android:id="@+id/deleteStockSymbols" />
    </TableRow>
</TableLayout>
